# llrq

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GENOME_SCALE_README.md  Gemfile  MANIFEST.in  MASS_ACTION_ALGORITHM.md  MASS_ACTION_USAGE.md  README.md  README_docs.md  _config.yml  advanced-control.md  api-reference.md  cvx-control.md  documentation.md  examples.md  frequency-control.md  getting-started.md  index.md  llrq_frequency_entropy.md  mass-action-comparison.html  mass-action-simulator.md  pyproject.toml  test_algorithm_reliability.py  test_direct.py  test_dynamics_simple.py  test_mass_action.py  theory.md  thermodynamics.md  tutorials.md
.github/workflows/: ci.yml
_includes/: custom-head.html  head_custom.html  interactive_demo.html
_layouts/: default.html
assets/: main.scss
data/: cm_params_20250912_134119.json  synthetic_forward_20250912_134326.csv  synthetic_forward_20250912_135323.csv  synthetic_reverse_20250912_134315.csv  synthetic_reverse_20250912_135323.csv
examples/: accelerated_vs_mass_action.py  accelerated_vs_mass_action_three_rxn.py  accelerated_vs_mass_action_twelve_rxn.py  accelerated_vs_mass_action_two_rxn.py  constant_control_demo.py  cvx_constrained_control.py  cvx_custom_objective.py  cvx_sparse_control.py  cycle_closed_loop.py  entropy_aware_control.py  entropy_production_demo.py  example_thermodynamic_accounting.py  frequency_entropy_control.py  frequency_space_control.py  frequency_space_simulation.py  genome_scale_demo.py  icnn_fit_vs_mass_action_three_rxn.py  icnn_fit_vs_mass_action_three_rxn_tellurium.py  integrated_control_demo.py  k_bounds_constraints_demo.py  linear_vs_mass_action.py  linear_vs_mass_action_simple.py  lqr.py  lqr_complete_example.py  lqr_showcase.py  mass_action_example.py  moiety_cstr_example.py  moiety_selective_removal_example.py  simple_example.py  test_yeast_availability.py  yeast_glycolysis_llrq.py  yeast_metabolic_flux_switching.py
examples/yeast_glycolysis/: README.md  extract_keq_values.py  stoichiometry_reference.py  yeast_B_matrix.csv  yeast_K_matrix.csv  yeast_keq_values.csv  yeast_loglinear_README.txt
models/: README.md  yeast-GEM.xml  yeast-GEM.yml
output/: llrq_fit_comparison_20250912_143055.csv  llrq_fit_params_20250912_141841.json  llrq_fit_params_20250912_144507.json  llrq_fit_results_20250912_143131.json  llrq_predictions_20250912_144507.csv
scripts/: bound_K.py  bound_K_readme.md  check_test_margins.py  cm_rate_law_integrated.py  icnn.py  improved_mass_action_fit.md  llrq_fitting.py  llrq_fitting_improved.py  saturation.md  simple_llrq_fit.py  synthetic_data_with_fitting.py  test_integration_accuracy.py  thermo_helper.py
scripts/bimolecular/: K_matrix_from_modes.py  cm_multi_mode_fitting.py  fit_cm_trajectories.py  lnQ_loglinear_fit.py  lnQ_loglinear_fit_cvxpy.py  multi_mode_example.py  special_fitting.py  special_fitting_example.py  test_fit_generalization.py
scripts/metanomics_time_series/: LLRQ_K_Matrix_Analysis_Results.md  README.md  extracellular_metabolites_timeseries.csv  (+17 more)
tests/: __init__.py  test_api_integration.py  test_cvx_control.py  test_edge_cases.py  test_entropy_control.py  test_format_comparison.py  test_frequency_control.py  test_frequency_entropy.py  test_genome_scale.py  test_integration.py  test_k_estimation.py  test_kalman_reduced.py  test_llrq_dynamics.py  test_lqr_controller.py  test_mass_action.py  test_mass_action_control.py  test_mass_action_simple.py  test_moiety_dynamics.py  test_performance.py  test_reaction_network.py  test_sbml_parser.py  test_solver.py  test_sparse_operations.py  test_thermodynamic_accounting.py  test_thermodynamic_accounting_entropy.py  test_thermodynamics.py  test_time_varying_drives.py  test_visualization.py  test_yaml_parser.py  test_yeast_model.py
(+42 files in other folders)
